--- a/src/component/container/PDFViewerContainer/PDFViewerContainer.css
+++ b/src/component/container/PDFViewerContainer/PDFViewerContainer.css
@@ -2,3 +2,14 @@
     width: 100%;
     height: 100%;
 }
+
+.PDFViewerContainer-Dropzone {
+    position: absolute;
+    z-index: 1000;
+    top: 0;
+    left: 0;
+    background: transparent;
+    width: 0;
+    height: 0;
+}
+
